sass/_header.scss
@charset "utf-8";

.header {
	.admin-bar & {
		top: 46px;
		position: absolute; 
		
		@include breakFirst(783px){
			top: 32px; 
		}
	}
	.disable-global & .menu-wrap {
		background-color: transparent;
		
		@include breakFirst(medium){
			height: 100px; 
		}
		
		.main-menu-wrap {
			top: 0;	
		}
	}
	&.unit .logo {
		display: none; 
		
		@include breakFirst(large){
			display: block;
		}	
	}
	&.unit .logo.mobile {
		display: block;
		
		@include breakFirst(large){
			display: none;
		}	
	}
}
.main-menu-wrap li:nth-child(odd) {
	@media screen and ( max-width: $screen-sm-max ){
		background: $white;
	}
}

.header-type-text .header.unit {
	@media screen and ( min-width: $screen-md ){
		background-color: transparent;
	}
	
	.logo {
		@media screen and (min-width: $screen-sm){
			display: block;
			height: 60px;
			width: 60px;
			background-color: #E47426;
			padding: 0;
		}
		@media screen and (min-width: $screen-md){
			height: 150px;
			width: 150px;
		}
	}
	.logo-uf svg {
		@media screen and (min-width: $screen-sm){
			width: 30px;
			height: 19px;
			position: absolute;
			top: 20px;
			left: 15px;
		}
		@media screen and (min-width: $screen-md){
			width: 74px;
			height: 48px;
			top: 51px;
			left: 38px;
		}
	}
	.site-title {
		background-color: $blue;
		height: 60px;
		overflow: hidden;
		margin: 0 120px 0 0;
		padding: 0 5px 0 15px;
		display: table;
		
		h1 {
			font-family: quadon, Georgia, serif;
			font-weight: 500;
			text-transform: none;
			letter-spacing: 1px;
			font-size: 13px;
			margin: 0;
			display: table-cell;
			vertical-align: middle;
			
			@media screen and (max-width: $screen-sm-max){
				line-height: 14px;
			}
			
			a {
				color: $white;
			}
		}
		@media screen and (min-width: $screen-md){
			height: 50px;
			background-color: $white;
			position: absolute;
			top: 50px;
			left: 150px;
			padding-left: 20px;
			z-index: 1001;
			display: block;
			line-height: 72px; 
			
			h1 {
				font-size: 24px;
				display: inline-block;
				
				a {
					color: rgb(13, 83, 153);
				}
			}
			
		}
		
	}
	#global-menu-title {
		@media screen and (min-width: $screen-md){
			padding-left: 150px;
			padding-right: 30px;
			
			a {
				padding-left: 20px;
				font-size: 28px;
			}
		}
	}
	.menu-wrap {
		background-color: $white;
	}
	.main-menu-wrap {
		@media screen and (min-width: $screen-md){
			padding-left: 150px;
			top: 100px;
			height: 50px;
			
			ul#menu-main-menu {
				margin-left: 20px;
			}
		}
		.main-menu-link {
			@media screen and (min-width: $screen-md){
				padding-top: 12px;
				padding-bottom: 12px;
				font-size: 14px;
				font-weight: 800;
				color: $orange;
				
				&:hover, &:active {
					color: $blue;
				}
			}
		}
		&>ul>li {
			transition: width 1s ease-in-out; // animate
		}
		li:hover a {
			background-color: transparent;
		}
	}
	.dropdown {
		@media screen and (min-width: $screen-lg){
			top: 50px;
		}
	}
	.aux-menu-wrap {
		background-color: $blue;
		
		@media screen and (min-width: $screen-md){
			position: absolute;
			top: 0;
			padding-left: 0;
			text-align: left;
		}
		
		.audience-nav-wrap {
			border-left: none;
		}
		.audience-nav-wrap .arw-right {
			border-left: 1px solid #fff;
			border-color: rgba(255,255,255,0.2);
		}
	}
}

